# SupervisoAgent

./: .env.example  .gitignore  README.md  Supervisor_Agent_Control_Tower_Master_Implementation_Prompt (1) 1.md  TEST_RESULTS.txt  app.py  diagnostic_notebook.ipynb  pyproject.toml  requirements.txt  run_all.py  supervisor_agent_control_tower_hld_lld_poc 1.pptx  thorough_check.ipynb
.streamlit/: config.toml  secrets.toml.example
data/: supervisor_control_tower.xlsx
scripts/: init_db.py  seed_data.py
sql/: schema.sql
src/data/: supervisor_control_tower.xlsx
src/supervisor_control_tower/: __init__.py  auth.py  config.py  db.py  excel_store.py  insights.py  judge.py  llm_client.py  models.py  orchestrator.py  repositories.py  seed_records.py  synthesizer.py  validation_service.py
src/supervisor_control_tower/data_science/: __init__.py  record_profile.py  scorecard.py
src/supervisor_control_tower/rules/: __init__.py  engine.py
src/supervisor_control_tower/tools/: __init__.py  base.py  finops.py  infrastructure.py  pipeline.py  project_management.py
src/supervisor_control_tower/ui/: app.py  components.py
src/supervisor_control_tower/ui/pages/: agent_status.py  glossary.py  insights_page.py  overview.py  review_history.py  run_validation.py
tests/: conftest.py  test_excel_storage.py  test_integration_optional.py  test_orchestrator.py  test_production_seed_records.py  test_registry.py  test_rules.py  test_synthesizer_judge.py
