[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supervisor-agent-control-tower"
version = "0.1.0"
description = "POC Supervisor Agent Control Tower for validating four AI agents"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.38.0",
  "sqlalchemy>=2.0.30",
  "psycopg2-binary>=2.9.9",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "requests>=2.32.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.5"
  "plotly"
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests requiring a running PostgreSQL database"
]
